--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Karla:wght@700&display=swap");
+
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  background: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#root {
+  margin: 0;
+  width: 360px;
+  height: 379px;
+  background: #0b2434;
+  overflow: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
+  width: 320px;
+  height: 320px;
+  margin: 30px 20px;
+  background: #f5f5f5;
+  border-radius: 6.4px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.die-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 19px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.die {
+  width: 37.3px;
+  height: 37.3px;
+  background: #ffffff;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 3.96766px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Karla;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21.4254px;
+  line-height: 25px;
+  color: #2b283a;
 }
