Add dice styling, functionality to control color

--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,16 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
   background: white;
+}
+
+body {
+  font-family: "Karla", sans-serif;
 }
 
 #root {
@@ -23,8 +29,36 @@ main {
   background: #f5f5f5;
   border-radius: 6.4px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.game-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.game-text-heading {
+  font-size: 26px;
+  line-height: 30px;
+  letter-spacing: -0.03em;
+  color: #2b283a;
+}
+
+.game-text-para {
+  color: #4A4E74;
+  width: 233px;
+  height: 48px;
+  margin-bottom: 23px;
+  font-family: "Inter", sans-serif;
+  font-size: 13px;
+  line-height: 16px;
+  letter-spacing: -0.03em;
+  color: #4a3e74;
 }
 
 .die-container {
@@ -48,4 +82,22 @@ main {
   font-size: 21.4254px;
   line-height: 25px;
   color: #2b283a;
+  cursor: pointer;
+}
+.die.held {
+  background: #59e391;
+}
+.roll-dice-btn {
+  color: #fff;
+  background: #5035ff;
+  width: 92.16px;
+  height: 35.84px;
+  margin-top: 26px;
+  border-radius: 4px;
+  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+  border: none;
+  cursor: pointer;
+}
+.roll-dice-btn:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
